# gaxera

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  PHASE_4_ENGINEERING_HANDOFF.md  README.md  SECURITY.md  check_log.py  rust-toolchain.toml
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: adr_proposal.md  bug_report.md
.github/workflows/: ci.yml
crates/gaxera-abi/: Cargo.toml
crates/init/: Cargo.toml
crates/kernel-core/: Cargo.toml
crates/libgaxera/: Cargo.toml
crates/pci_bus_server/: Cargo.toml
crates/ramfs/: Cargo.toml
crates/script_session/: Cargo.toml
crates/virtio_block_server/: Cargo.toml
crates/virtio_net_server/: Cargo.toml
docs/: README.md  environment.md
docs/adr/: 0000-engineering-philosophy.md  0001-limine-boot-protocol.md  0002-x86_64-descriptor-tables-and-exception-policy.md  0003-boot-context-and-physical-memory-ownership.md  0004-kernel-address-space-transition-and-heap.md  0005-acpi-local-apic-and-timer-delivery.md  0006-panic-diagnostics-and-release-verification.md  0007-capability-identity-delegation-and-revocation.md  0008-resource-accounting-and-kernel-allocation.md  0009-user-memory-access-and-fault-recovery.md  0010-user-privilege-transition-and-syscall-abi.md  0011-user-address-space-and-mapping-policy.md  0012-thread-lifecycle-and-cooperative-execution.md  0013-endpoint-ipc-notifications-and-reply-authority.md  0014-timer-calibration-and-preemptive-scheduling.md  0015-message-driven-sys-invoke.md  0016-subsystem-decomposed-elf-loader.md  0017-boot-abi-and-capability-graph.md  0018-hybrid-frame-recycling-and-page-table-reclamation.md  0019-two-tier-kernel-slab-and-heap-allocator.md  0020-subregion-memory-mapping-and-unmap-primitive.md  0021-first-class-waitset-and-multiclient-ipc.md  0022-interrupt-notification-architecture-and-hardware-capabilities.md  0023-mmio-mapping-capabilities-and-driver-address-space-model.md  0024-userspace-runtime-architecture-and-libgaxera.md  0025-service-discovery-registry-and-bootstrap-protocol.md  TEMPLATE.md  (+7 more)
kernel/: Cargo.toml  build.rs  limine.conf
kernel/src/: framebuffer.rs  global.rs  init.rs  lib.rs  main.rs  serial.rs
kernel/src/arch/x86_64/: acpi.rs  address_space.rs  apic.rs  boot.rs  context.rs  cpu.rs  descriptors.rs  diagnostics.rs  entry.rs  exceptions.rs  ioapic.rs  linker.ld  loader.rs  mod.rs  paging.rs  pci.rs  preemption.rs  probe.rs  qemu.rs  smp.rs  stack.rs  syscall.rs  test.rs  test_ipc.rs  test_preemption.rs  test_yield.rs  thread.rs  timer_entry.rs  trap_frame.rs  user.rs  user_copy.rs
kernel/src/memory/: boot.rs  heap.rs  mapping.rs  mod.rs  physical.rs
xtask/: Cargo.toml
(+99 files in other folders)
