[workspace]
resolver = "2"
members = [
    "crates/gaxera-abi",
    "crates/init",
    "crates/kernel-core",
    "crates/libgaxera",
    "crates/pci_bus_server",
    "crates/ramfs",
    "crates/script_session",
    "crates/virtio_block_server",
    "crates/virtio_net_server",
    "kernel",
    "xtask",
]

[workspace.lints.clippy]
undocumented_unsafe_blocks = "deny"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
