[package]
name = "kernel"
version = "0.1.0"
edition = "2024"

[features]
panic-test = ["qemu-test"]
qemu-test = []
test-boot = ["qemu-test"]
test-breakpoint = ["qemu-test"]
test-divide-error = ["qemu-test"]
test-invalid-opcode = ["qemu-test"]
test-general-protection = ["qemu-test"]
test-page-fault = ["qemu-test"]
test-double-fault = ["qemu-test"]
test-memory = ["qemu-test"]
test-heap-guard = ["qemu-test"]
test-apic-timer = ["qemu-test"]
test-user-transition = ["qemu-test"]
test-user-privilege = ["qemu-test"]
test-user-invalid-frame = ["qemu-test"]
test-syscall-round-trip = ["qemu-test"]
test-user-copy-fault = ["qemu-test"]
test-cooperative-yield = ["qemu-test"]
test-context-preservation = ["qemu-test"]
test-ipc = ["qemu-test"]
test-preemption = ["qemu-test"]
test-frame-recycling = ["qemu-test"]
test-slab-allocation = ["qemu-test"]
test-unmap-memory = ["qemu-test"]
test-shared-memory = ["qemu-test"]



[dependencies]
limine = "=0.6.5"
x86_64 = { version = "=0.15.5", default-features = false, features = ["instructions", "abi_x86_interrupt"] }
linked_list_allocator = { version = "=0.10.6", default-features = false, features = ["use_spin"] }
kernel-core = { path = "../crates/kernel-core" }
gaxera-abi = { path = "../crates/gaxera-abi" }
spinning_top = { version = "0.3.0", default-features = false }

[lints]
workspace = true
